routerrpc: add outgoing_chan_ids to EstimateRouteFee
